--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# Global
+.DS_Store
+node_modules/
+*.log
+
+# Backend
 backend/.env
+backend/dist/
+backend/coverage/
+
+# Frontend
+frontend/.next/
+frontend/out/
+frontend/build/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
