--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,4 +1,10 @@
 {
+    "builds": [
+        {
+            "src": "api/index.ts",
+            "use": "@vercel/node"
+        }
+    ],
     "rewrites": [
         {
             "source": "/(.*)",
