--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.1",
+    "@vercel/node": "^5.5.33",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
