fix: resolve all frontend lint errors for clean Vercel build

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,5 +4,10 @@
             "source": "/(.*)",
             "dest": "/api/index.ts"
         }
-    ]
+    ],
+    "functions": {
+        "api/index.ts": {
+            "maxDuration": 60
+        }
+    }
 }
