--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,9 @@ MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/weekendtri
 # API Keys
 API_KEY=your_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
+PEXELS_API_KEY=your_pexels_api_key_here
+JWT_SECRET=your_jwt_secret_here
+
+# URLs for CORS and Auth
+CLIENT_URL=https://frontend-tau-murex-95.vercel.app
+FRONTEND_URL=https://frontend-tau-murex-95.vercel.app
