Fix: location blinking, AdSense error, local network prompts, and added missing routes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,5 +8,5 @@ PEXELS_API_KEY=your_pexels_api_key_here
 JWT_SECRET=your_jwt_secret_here
 
 # URLs for CORS and Auth
-CLIENT_URL=https://frontend-tau-murex-95.vercel.app
-FRONTEND_URL=https://frontend-tau-murex-95.vercel.app
+CLIENT_URL=https://www.weekendtravellers.com/
+FRONTEND_URL=https://www.weekendtravellers.com/
