--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "weekendtrip-root",
     "private": true,
     "scripts": {
-        "build": "cd frontend && npm install && npm run build",
-        "vercel-build": "cd frontend && npm install && npm run vercel-build"
+        "build": "cd frontend && npm install && npm run build"
     }
 }
