fix: satisfy vercel framework detector by adding next to root package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "weekendtrip-root",
     "private": true,
+    "dependencies": {
+        "next": "16.1.6"
+    },
     "scripts": {
         "build": "cd frontend && npm install && npm run build"
     }
