--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,7 @@ MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/weekendtri
 API_KEY=your_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
 PEXELS_API_KEY=your_pexels_api_key_here
+TRAVELPAYOUTS_TOKEN=your_travelpayouts_token_here
 JWT_SECRET=your_jwt_secret_here
 
 # URLs for CORS and Auth
