--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,15 @@
 {
-    "rewrites": [
+    "version": 2,
+    "builds": [
         {
-            "source": "/(.*)",
-            "destination": "/api/index.ts"
+            "src": "src/index.ts",
+            "use": "@vercel/node"
         }
     ],
-    "functions": {
-        "api/index.ts": {
-            "maxDuration": 60
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "src/index.ts"
         }
-    }
+    ]
 }
