--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@react-leaflet/core": "^3.0.0",
     "@react-oauth/google": "^0.13.4",
+    "@tailwindcss/typography": "^0.5.0-alpha.3",
     "@types/leaflet-routing-machine": "^3.2.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,6 +26,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-leaflet": "^5.0.0",
+    "react-markdown": "^10.1.0",
     "simple-icons": "^16.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
