--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # API URL for backend communication
-NEXT_PUBLIC_API_URL=http://localhost:5001
+NEXT_PUBLIC_API_URL=https://backend-kappa-gold-11.vercel.app
 
 # Public URL of the frontend (for SEO/metadata)
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
