--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "functions": {
         "api/index.ts": {
-            "runtime": "vercel-node@5.5.33"
+            "runtime": "@vercel/node"
         }
     },
     "rewrites": [
