--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,23 @@
 {
     "version": 2,
-    "outputDirectory": "public",
+    "builds": [
+        {
+            "src": "api/index.ts",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "public/**",
+            "use": "@vercel/static"
+        }
+    ],
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/api/index.ts"
+            "destination": "api/index.ts"
         },
         {
             "source": "/(.*)",
-            "destination": "/public/index.html"
+            "destination": "public/index.html"
         }
     ]
 }
