--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,9 @@
 {
     "framework": "nextjs",
-    "buildCommand": "next build",
-    "outputDirectory": ".next"
+    "rewrites": [
+        {
+            "source": "/api/:path*",
+            "destination": "https://backend-flax-eight-93.vercel.app/api/:path*"
+        }
+    ]
 }
