--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -15,35 +15,48 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Push to Frontend Repo
-        uses: cpina/github-action-push-to-another-repository@main
+      - name: Sync Backend
         env:
-          API_TOKEN_GITHUB: ${{ secrets.SYNC_GITHUB_TOKEN }}
-        with:
-          source-directory: 'frontend'
-          destination-github-username: 'madmags29'
-          destination-repository-name: 'frontend'
-          user-email: 'mails365@gmail.com'
-          target-branch: main
+          GITHUB_TOKEN: ${{ secrets.SYNC_GITHUB_TOKEN }}
+        run: |
+          git config --global user.email "mails365@gmail.com"
+          git config --global user.name "Majid Khan"
+          
+          # Clone and update backend
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/backend.git backend-repo
+          cd backend-repo
+          git rm -rf .
+          cp -r ../backend/* .
+          git add .
+          git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
+          git push origin main --force
+          cd ..
 
-      - name: Push to Backend Repo
-        uses: cpina/github-action-push-to-another-repository@main
+      - name: Sync Frontend
         env:
-          API_TOKEN_GITHUB: ${{ secrets.SYNC_GITHUB_TOKEN }}
-        with:
-          source-directory: 'backend'
-          destination-github-username: 'madmags29'
-          destination-repository-name: 'backend'
-          user-email: 'mails365@gmail.com'
-          target-branch: main
+          GITHUB_TOKEN: ${{ secrets.SYNC_GITHUB_TOKEN }}
+        run: |
+          # Clone and update frontend
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/frontend.git frontend-repo
+          cd frontend-repo
+          git rm -rf .
+          cp -r ../frontend/* .
+          git add .
+          git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
+          git push origin main --force
+          cd ..
 
-      - name: Push to Final Repo
-        uses: cpina/github-action-push-to-another-repository@main
+      - name: Sync Final
         env:
-          API_TOKEN_GITHUB: ${{ secrets.SYNC_GITHUB_TOKEN }}
-        with:
-          source-directory: '.'
-          destination-github-username: 'madmags29'
-          destination-repository-name: 'wt-trip-final'
-          user-email: 'mails365@gmail.com'
-          target-branch: main
+          GITHUB_TOKEN: ${{ secrets.SYNC_GITHUB_TOKEN }}
+        run: |
+          # Clone and update final
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/wt-trip-final.git final-repo
+          cd final-repo
+          git rm -rf .
+          cp -r ../* .
+          # Remove the temporary clone folders
+          rm -rf backend-repo frontend-repo final-repo
+          git add .
+          git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
+          git push origin main --force
