--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
             "destination": "backend/api/index.ts"
         },
         {
+            "source": "/admin/(.*)",
+            "destination": "admin/$1"
+        },
+        {
             "source": "/AgodaPartnerVerification.htm",
             "destination": "frontend/public/AgodaPartnerVerification.htm"
         }
