--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -26,8 +26,8 @@ jobs:
           git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/backend.git /tmp/backend-repo
           cd /tmp/backend-repo
           
-          # Sync backend folder to target repo, excluding .git
-          rsync -av --delete --exclude='.git' $GITHUB_WORKSPACE/backend/ .
+          # Sync backend folder to target repo, excluding .git and .github
+          rsync -av --delete --exclude='.git' --exclude='.github' $GITHUB_WORKSPACE/backend/ .
           
           git add .
           git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
@@ -40,8 +40,8 @@ jobs:
           git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/frontend.git /tmp/frontend-repo
           cd /tmp/frontend-repo
           
-          # Sync frontend folder to target repo, excluding .git
-          rsync -av --delete --exclude='.git' $GITHUB_WORKSPACE/frontend/ .
+          # Sync frontend folder to target repo, excluding .git and .github
+          rsync -av --delete --exclude='.git' --exclude='.github' $GITHUB_WORKSPACE/frontend/ .
           
           git add .
           git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
@@ -51,11 +51,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.SYNC_GITHUB_TOKEN }}
         run: |
-          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/wt-trip-final.git /tmp/final-repo
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/majid.git /tmp/final-repo
           cd /tmp/final-repo
           
-          # Sync entire monorepo to target repo, excluding .git
-          rsync -av --delete --exclude='.git' $GITHUB_WORKSPACE/ .
+          # Sync entire monorepo to target repo, excluding .git and .github
+          rsync -av --delete --exclude='.git' --exclude='.github' $GITHUB_WORKSPACE/ .
           
           git add .
           git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
