--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -25,10 +25,8 @@ jobs:
           # Clone to /tmp to avoid circular copy
           git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/backend.git /tmp/backend-repo
           cd /tmp/backend-repo
-          
-          # Sync backend folder to target repo, excluding .git and .github
-          rsync -av --delete --exclude='.git' --exclude='.github' $GITHUB_WORKSPACE/backend/ .
-          
+          git rm -rf .
+          cp -r $GITHUB_WORKSPACE/backend/* .
           git add .
           git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
           git push origin main --force
@@ -39,10 +37,8 @@ jobs:
         run: |
           git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/frontend.git /tmp/frontend-repo
           cd /tmp/frontend-repo
-          
-          # Sync frontend folder to target repo, excluding .git and .github
-          rsync -av --delete --exclude='.git' --exclude='.github' $GITHUB_WORKSPACE/frontend/ .
-          
+          git rm -rf .
+          cp -r $GITHUB_WORKSPACE/frontend/* .
           git add .
           git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
           git push origin main --force
@@ -51,11 +47,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.SYNC_GITHUB_TOKEN }}
         run: |
-          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/majid.git /tmp/final-repo
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/wt-trip-final.git /tmp/final-repo
           cd /tmp/final-repo
+          git rm -rf .
           
-          # Sync entire monorepo to target repo, excluding .git and .github
-          rsync -av --delete --exclude='.git' --exclude='.github' $GITHUB_WORKSPACE/ .
+          # Copy everything except hidden .git (already handled by git rm)
+          # Use rsync if available, or just cp
+          cp -r $GITHUB_WORKSPACE/* .
           
           git add .
           git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
