--- a/.github/workflows/sync-repos.yml
+++ b/.github/workflows/sync-repos.yml
@@ -43,18 +43,14 @@ jobs:
           git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
           git push origin main --force
 
-      - name: Sync Final
+      - name: Sync Frontend
         env:
           GITHUB_TOKEN: ${{ secrets.SYNC_GITHUB_TOKEN }}
         run: |
-          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/wt-trip-final.git /tmp/final-repo
-          cd /tmp/final-repo
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/madmags29/frontend.git /tmp/frontend-repo
+          cd /tmp/frontend-repo
           git rm -rf .
-          
-          # Copy everything except hidden .git (already handled by git rm)
-          # Use rsync if available, or just cp
-          cp -r $GITHUB_WORKSPACE/* .
-          
+          cp -r $GITHUB_WORKSPACE/frontend/* .
           git add .
           git commit -m "Auto-sync from monorepo" || echo "No changes to commit"
           git push origin main --force
